--- a/ClearAsset/Controllers/Register/Register.storyboard
+++ b/ClearAsset/Controllers/Register/Register.storyboard
@@ -919,7 +919,7 @@ If you don't receive an email, please make sure to check your Spam or Junk folde
             <color red="0.16078431372549021" green="0.20392156862745098" blue="0.3843137254901961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="appTextBlue">
-            <color red="0.16078431372549021" green="0.20392156862745098" blue="0.3843137254901961" alpha="0.38" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.16078431372549021" green="0.20392156862745098" blue="0.3843137254901961" alpha="0.37999999523162842" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="appTextfieldBG">
             <color red="0.92549019607843142" green="0.92549019607843142" blue="0.92549019607843142" alpha="0.56999999284744263" colorSpace="custom" customColorSpace="sRGB"/>
