--- a/ClearAsset/Controllers/Home/cells/topCell/TopViewCell.xib
+++ b/ClearAsset/Controllers/Home/cells/topCell/TopViewCell.xib
@@ -35,10 +35,42 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GQl-uV-e0Y" userLabel="searchView">
                                 <rect key="frame" x="16" y="4" width="387" height="38"/>
-                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search for ..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VuJ-Jj-bW0">
+                                        <rect key="frame" x="12" y="2" width="329" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cLN-xB-LYj">
+                                        <rect key="frame" x="349" y="4" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="cLN-xB-LYj" secondAttribute="height" multiplier="1:1" id="Idv-4b-ROR"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="search"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="VuJ-Jj-bW0" firstAttribute="width" secondItem="GQl-uV-e0Y" secondAttribute="width" multiplier="0.85" id="3eh-ph-oWC"/>
+                                    <constraint firstAttribute="trailing" secondItem="cLN-xB-LYj" secondAttribute="trailing" constant="8" id="9s9-XS-uzu"/>
+                                    <constraint firstItem="cLN-xB-LYj" firstAttribute="top" secondItem="GQl-uV-e0Y" secondAttribute="top" constant="4" id="Ge1-a2-qCT"/>
                                     <constraint firstAttribute="height" constant="38" id="SBY-XR-5re"/>
+                                    <constraint firstAttribute="bottom" secondItem="VuJ-Jj-bW0" secondAttribute="bottom" constant="2" id="bbB-qk-LGE"/>
+                                    <constraint firstAttribute="bottom" secondItem="cLN-xB-LYj" secondAttribute="bottom" constant="4" id="gX9-WM-UOK"/>
+                                    <constraint firstItem="VuJ-Jj-bW0" firstAttribute="leading" secondItem="GQl-uV-e0Y" secondAttribute="leading" constant="12" id="rtv-pC-eB5"/>
+                                    <constraint firstItem="VuJ-Jj-bW0" firstAttribute="top" secondItem="GQl-uV-e0Y" secondAttribute="top" constant="2" id="xan-Uw-cQU"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" name="appBorder"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="3Dh-CI-mjf">
                                 <rect key="frame" x="16" y="58" width="387" height="55.5"/>
@@ -377,6 +409,10 @@
     </designables>
     <resources>
         <image name="backTimes" width="355" height="218"/>
+        <image name="search" width="24" height="24"/>
+        <namedColor name="appBorder">
+            <color red="0.82352941176470584" green="0.82352941176470584" blue="0.82352941176470584" alpha="0.52999997138977051" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="appDarkBlue">
             <color red="0.16078431372549021" green="0.20392156862745098" blue="0.3843137254901961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
